--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "wrangler": "^4.46.0"
   }
 }
